# edi_sm_ur5

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: sm_ur5_config.yaml  sm_ur5_test.yaml
include/sm_ur5/: sm_ur5.h
include/sm_ur5/clients/pick_and_place_client/: cl_ur5_pick_and_place.h
include/sm_ur5/clients/pick_and_place_client/client_behaviors/: cb_move_cartesian.h  cb_move_predefined.h  cb_publish_state.h
include/sm_ur5/orthogonals/: or_ur5.h
include/sm_ur5/states/: st_ur5_above_box.h  st_ur5_answer.h  st_ur5_initial.h  st_ur5_pick.h  st_ur5_pick_cb.h  st_ur5_place.h  st_ur5_place_cb.h  st_ur5_post_pick.h  st_ur5_post_place.h  st_ur5_pre_pick.h  st_ur5_pre_place.h  st_ur5_restart_pick.h  st_ur5_start_pick.h  st_ur5_suction_check.h
launch/: sm_ai4di_solo.launch  sm_ur5.launch
src/: sm_ur5_node.cpp
src/clients/pick_and_place_client/: cl_ur5_pick_and_place.cpp
src/clients/pick_and_place_client/client_behavors/: cb_move_cartesian.cpp  cb_move_predefined.cpp  cb_publish_state.cpp
test/: sm_ur5.test
