<?xml version="1.0" ?>
<package format="2">
  <name>sm_ur5</name>
  <version>0.9.1</version>
  <description>The sm_ur5 package</description>

  
  <maintainer email="pablo@ibrobotics.com">Pablo Inigo Blasco</maintainer>


  
  <license>BSD-3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>smacc</depend>
  <depend>ros_timer_client</depend>
  <depend>xterm</depend>
  <depend>smacc_runtime_test</depend>

  <!-- <depend>move_base_z_client_plugin</depend> -->
  <depend>move_group_interface_client</depend>

  <depend>control_msgs</depend>
  <depend>fake_localization</depend>
  
  <depend>multi_robot_control</depend>
  <depend>moveit_visual_tools</depend>
  <depend>robotiq_2f_gripper_control</depend>

  <export>
    

  </export>
</package>
